<resources>
    <string name="app_name">projecte2</string>
    <string name="username_hint">Nom usuari</string>
    <string name="email_hint">Correu electrònic</string>
    <string name="password_hint">Contrasenya</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="about_us_button_text">Més sobre nosaltres</string>
    <string name="logo_descripcion">Logo de la empresa</string>
    <string name="register_button_text">Registrarse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_producto">Imagen del producto</string>
    <string-array name="estados_ticket">
        <item>pendiente</item>
        <item>en_proceso</item>
        <item>resuelto</item>
    </string-array>

</resources>