<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:padding="16dp">

    <!-- Logo de la empresa -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo_descripcion"
        android:src="@drawable/logo_empresa" />


    <TextView
        android:id="@+id/descripcioApp"
        android:layout_below="@id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="Digitalitza la teva tenda amb nosaltres"
        android:textSize="16sp"
        android:paddingTop="20dp"
        android:textColor="#777777"
        android:gravity="center" />

    <!-- Campo para el correo electrónico -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descripcioApp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <!-- Campo para la contraseña -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <!-- Botón de Login -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login_button_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register_button_text"
        android:textColor="@color/white" />

    <!-- Botón "Más sobre nosotros" -->
    <Button
        android:id="@+id/aboutUsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/about_us_button_text"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>