<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:padding="16dp"
    android:id="@+id/register">

    <!-- Logo de la empresa -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo_descripcion"
        android:src="@drawable/logo_empresa" />

    <!-- Título de la pantalla de registro -->
    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="Registre"
        android:textSize="24sp"
        android:textColor="#000000"
        android:gravity="center" />

    <!-- Campo para el nombre del usuario -->
    <EditText
        android:id="@+id/nomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <!-- Campo para el correo electrónico -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomEditText"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <!-- Campo para la contraseña -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <!-- Campo para repetir la contraseña -->
    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Repeteix la contrasenya"
        android:inputType="textPassword" />

    <!-- Botón de Registro -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeatPasswordEditText"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Registrarse"
        android:textColor="@color/white" />

    <!-- Enlace para volver al Login -->
    <Button
        android:id="@+id/loginLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/transparent"
        android:text="Tens un compte? Inicia sessió"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>